# employee-management-system

./: CMakeLists.txt  README.md
include/: admin_functions.h  login.h  user_functions.h
src/: admin_functions.cpp  login.cpp  main.cpp  user_functions.cpp
